--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
     </ul>
     
-    <h3>Países con mayor población</h3>
+    <h3>Países con mayor población:</h3>
     <!-- Lista ordenada -->
     <ol>
         <li>China: 1.444.216.107 habitantes</li>
